--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,42 @@
-style.css
+body {
+  background-color: #20367A;
+  background-image: url("../images/bg.png");
+  background-size: cover;
+}
+
+h1 {
+  text-align: center;
+  color: rgb(239, 82, 35);
+  font-family: 'PT Serif', serif;
+  text-transform: uppercase;
+}
+
+nav {
+  background-color: rgb(239, 82, 35);
+  border-top: 4px solid white;
+  border-bottom: 4px solid white;
+}
+
+nav ul {
+  text-align: center;
+}
+
+nav li {
+  list-style-type: none;
+  display: inline;
+  padding: 0 20px;
+}
+
+a {
+  color: #20367A;
+}
+
+a:hover {
+  color: white;
+}
+
+.logo {
+  width: 200px;
+  display: block;
+  margin: auto;
+}
